tests/syntactic/input/input.err
Error: input qualifier already set in file input.dl at line 1
.decl A(x:number) input input
------------------------^-----
1 errors generated, evaluation aborted
