tests/syntactic/input/input.dl
.decl A(x:number) input input
